# TwoDE

./: .gitignore  2D Engine.sln  CMakeLists.txt  COPYRIGHT.md  Doxyfile  Makefile  README.md  cmake-kits.json  conanfile.txt
2D Engine/: 2D Engine.vcxproj  2D Engine.vcxproj.filters  Application.cpp  Application.h  CMakeLists.txt  Color.h  EngineMath.cpp  Entrypoint.h  Event.cpp  Event.h  GLFWWindow.cpp  GLFWWindow.h  Input.cpp  Input.h  Locator.cpp  Locator.h  Logger.cpp  Matrix4.cpp  Matrix4.h  OpenGLRenderer.cpp  OpenGLRenderer.h  PubSub.cpp  PubSub.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Square.h  Texture.h  Transform.cpp  Transform.h  TwoDE.h  Vector2.cpp  Vector2.h  Window.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters  SandboxApp.cpp  SandboxApp.h
docs/html/: _application_8cpp.html  _application_8cpp_8o_8d.html  _application_8cpp__incl.map  _application_8h.html  _application_8h__dep__incl.map  _application_8h__dep__incl.md5  _application_8h__incl.map  _application_8h__incl.md5  _application_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_o_p_y_r_i_g_h_t_8md.html  _circle_collider_component2_d_8h.html  _circle_collider_component2_d_8h__dep__incl.map  _circle_collider_component2_d_8h__dep__incl.md5  _circle_collider_component2_d_8h__incl.map  _circle_collider_component2_d_8h__incl.md5  _circle_collider_component2_d_8h_source.html  _clickable_component_8h.html  _clickable_component_8h__dep__incl.map  _clickable_component_8h_source.html  _collider_component2_d_8h.html  _collider_component2_d_8h__dep__incl.map  _collider_component2_d_8h__incl.map  _collider_component2_d_8h_source.html  _color_8cpp.html  _color_8cpp_8o_8d.html  _color_8cpp__incl.map  _color_8cpp__incl.md5  _color_8h.html  _color_8h__dep__incl.map  _color_8h__incl.map  _color_8h__incl.md5  _color_8h_source.html  _core_8h.html  _core_8h__dep__incl.map  _core_8h__dep__incl.md5  _core_8h_source.html  _custom_formatters_8h.html  _custom_formatters_8h__incl.map  (+492 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.html  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.html  classes_8.js  classes_9.html  classes_9.js  classes_a.html  classes_a.js  classes_b.html  classes_b.js  (+82 more)
docs/latex/: _application_8cpp.tex  _application_8cpp_8o_8d.tex  _application_8cpp__incl.md5  _application_8h.tex  _application_8h_source.tex  _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _c_o_p_y_r_i_g_h_t_8md.tex  _circle_collider_component2_d_8h.tex  _circle_collider_component2_d_8h_source.tex  _clickable_component_8h.tex  _clickable_component_8h__dep__incl.md5  _clickable_component_8h_source.tex  _collider_component2_d_8h.tex  _collider_component2_d_8h__dep__incl.md5  _collider_component2_d_8h__incl.md5  _collider_component2_d_8h_source.tex  _color_8cpp.tex  _color_8cpp_8o_8d.tex  _color_8h.tex  _color_8h__dep__incl.md5  _color_8h_source.tex  _core_8h.tex  _core_8h_source.tex  _custom_formatters_8h.tex  _custom_formatters_8h_source.tex  _engine_math_8cpp.tex  _engine_math_8cpp_8o_8d.tex  _engine_math_8h.tex  _engine_math_8h__dep__incl.md5  _engine_math_8h_source.tex  _engine_time_8cpp.tex  _engine_time_8cpp_8o_8d.tex  _engine_time_8cpp__incl.md5  _engine_time_8h.tex  _engine_time_8h__dep__incl.md5  _engine_time_8h__incl.md5  _engine_time_8h_source.tex  _entrypoint_8h.tex  _entrypoint_8h__dep__incl.md5  (+232 more)
resources/shaders/: default.frag  default.vert
src/: Application.cpp  Application.h  CMakeLists.txt  Camera.h  Color.cpp  Color.h  Core.h  CustomFormatters.h  EngineMath.cpp  EngineMath.h  EngineTime.cpp  EngineTime.h  Entrypoint.h  Event.cpp  Event.h  GLFWWindow.cpp  GLFWWindow.h  ISystem.h  Input.cpp  Input.h  Locator.cpp  Locator.h  Logger.cpp  Logger.h  Makefile  Matrix4.cpp  Matrix4.h  OpenGLRenderer.cpp  OpenGLRenderer.h  PubSub.cpp  PubSub.h  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Random.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  (+19 more)
src/Components/: CircleColliderComponent2D.h  ClickableComponent.h  ColliderComponent2D.h
src/Systems/: ISystem.cpp  ISystem.h  OnClickSystem.cpp  OnClickSystem.h
tests/: CMakeLists.txt  Makefile
tests/graphs/: CMakeLists.txt  Graphs.cpp  Graphs.h  Makefile
tests/graphs/Components/: NodeComponent.h
tests/graphs/Systems/: NodeSystem.h
tests/primitives/: CMakeLists.txt  Makefile  Primitives.cpp  Primitives.h
tests/sandbox/: CMakeLists.txt  Makefile  SandboxApp.cpp  SandboxApp.h
